syntax = "proto3";

package account.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/aradwann/eenergy/api/grpc/v1/pb";

service AccountService {
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {
    option (google.api.http) = {get: "/v1/accounts/{id}"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to create an account";
      summary: "create account";
    };
  }
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {
    option (google.api.http) = {
      post: "/v1/accounts"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to create an account";
      summary: "create account";
    };
  }
}

message GetAccountRequest {
  int64 id = 1;
}

message GetAccountResponse {
  Account account = 1;
}

message CreateAccountRequest {
  string username = 1;
}

message CreateAccountResponse {
  Account account = 1;
}

message Account {
  int64 id = 1;
  string owner = 2;
  int64 balance = 3;
  string unit = 4;
  google.protobuf.Timestamp created_at = 5;
}
